--- a/client/src/components/FeedCard/FeedCard.css
+++ b/client/src/components/FeedCard/FeedCard.css
@@ -1,5 +1,5 @@
 .card {
-    background: #000;
+    background:#000;
     border-radius: 2px;
     height: 325px;
     margin: 1rem;
@@ -10,7 +10,7 @@
   }
   
   .card > .img-container {
-    height: 60%;
+    height: 85%;
     overflow: hidden;
     text-align: center;
     background:#6CADDC;
@@ -46,8 +46,6 @@
     color: #d50000;
   }
   
-  li{
-    color: white;
-    overflow:hidden;
-  }
-  
+li, strong{
+  color:white;
+}
