File index.html has been updated with blah blah blah File App.css has been edited with blah blah blah

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,7 +17,9 @@
 .App-intro {
   font-size: large;
 }
-
+.slick-slider{
+  height:50% !important;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
